After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777671 - image rotation not applied on recipe tiles
image rotation not applied on recipe tiles
Status: RESOLVED FIXED
Product: recipes
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Recipes maintainer(s)
Recipes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-01-23 22:43 UTC by Matthias Clasen
Modified: 2017-01-24 06:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2017-01-23 22:43:21 UTC
this can be seen with the chicken noodle soup recipe