Apply image rotation in recipe tiles

This was simply overlooked since we didn't have any recipes
with rotated images that would show up in tiles.

https://bugzilla.gnome.org/show_bug.cgi?id=777671